# telegram_ban

./: .dockerignore  .gitignore  Dockerfile  README.md  channels.txt  chats.txt  main.py  normalize_channels.py  priority_channels.txt  pyproject.toml  report_texts.txt  storage.py
.github/workflows/: docker-image.yml
