[tool.poetry]
name = "telegram_ban"
version = "0.1.0"
description = ""
authors = ["Anton Simernia <anton.simernya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^1.4.7"
TgCrypto = "^1.2.3"
funcy = "^1.17"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]
ipython = "^8.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
